# addr_tool

./: README.md
addr_cleaner/: .flake8  LICENSE  README.md  main.py  pyproject.toml
addr_cleaner/addr_cleaner/: cleaner.py  gui.py
addr_cleaner/tests/: test_main.py
addr_model/: README.md  main.py  pyproject.toml
geocoder_api/: .db  .gitignore  README.md  main.py  pyproject.toml
geocoder_api/geocoder_api/: crear_db.py  db_xample.csv
