[tool.poetry]
name = 'addr_cleaner'
version = '0.1.0'
description = ''
authors = ['Fernando Pineda <wfpinedar@gmail.com>']
readme = "README.md"
packages = [{include = 'addr_cleaner'}]

[tool.poetry.dependencies]
python = '^3.9'
numpy = "^1.26.3"
pandas = "^2.2.0"
kivy = "^2.3.0"
openpyxl = "^3.1.2"
flet = "^0.19.0"
joblib = "^1.3.2"
scikit-learn = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = '^5.2'

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-unused-arguments = "^0.0.13"
black = "^24.1.0"

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

