[tool.poetry]
name = 'addr_model'
version = '0.1.0'
description = ''
authors = ['Fernando Pineda <wfpinedar@gmail.com>']

[tool.poetry.dependencies]
python = '^3.9'
scikit-learn = "^1.4.0"
joblib = "^1.3.2"
pandas = "^2.2.0"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = '^5.2'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
