[tool.poetry]
name = 'geocoder_api'
version = '0.1.0'
description = ''
authors = ['Fernando Pineda <wfpinedar@gmail.com>']

[tool.poetry.dependencies]
python = '^3.8'
pandas = '^1.2.0'
kivy = '^2.0.0'
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = '^5.2'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
